--- a/sve-app/src/styles/Sidebuttons.css
+++ b/sve-app/src/styles/Sidebuttons.css
@@ -31,3 +31,6 @@
     visibility: visible;
   }
   
+  @media screen and (max-width: 480px){
+
+  }
